# tttrsstts

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.ninja
include/: field.h  game.h  inputs.h  piece.h  updates.h
src/: field.c  game.c  inputs.c  main.c  main_curses.c  main_sdl.c  piece.c  updates.c
